--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,27 +1,8 @@
-# SERVER CONFIG
-server.port=8080
-
-# DATABASE CONFIG (update if needed)
-spring.datasource.url=jdbc:mysql://localhost:3306/serveup_db?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/serveup_db
 spring.datasource.username=root
 spring.datasource.password=MH26L2689@indica
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-# SPRING MAIL CONFIG - Gmail SMTP
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=serveup610@gmail.com
-spring.mail.password=mvqxnrelcwypmhou 
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.starttls.required=true
-spring.mail.default-encoding=UTF-8
-
-# Optional: Set email from name
-spring.mail.properties.mail.smtp.from=ServeUp <your_email@gmail.com>
-
-# LOGGING
-logging.level.org.springframework=INFO
+server.error.include-message=always
