Changed application properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/serveup_db
 spring.datasource.username=root
-spring.datasource.password=MH26L2689@indica
+spring.datasource.password=3116
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
